--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-read --allow-env --allow-net server.ts"
+    "dev": "deno run --watch --allow-read --allow-write --allow-env --allow-net server.ts"
   },
   "fmt": {
     "options": {
